# SMK

./: .gitignore  CMakeLists.txt  LICENSE  Package.resolved  Package.swift  README.md  keymap.json  sdkconfig.defaults
.artifacts/20260427-214517-a3ade62d-d11b-4a1e-ab26-8b5da2937832/: task.artifact.md  walkthrough.artifact.md
Sources/componets/: ble_helper.c  gpio_init.c  i2c_helper.c  kb_main.c  uart_init.c
Sources/smk/: Bridging.h  GPIORegisters.swift  KeyMatrix.swift  LayerEngine.swift  Main.swift
main/: CMakeLists.txt  linker.lf
